to get it working for tests
